# coding_challenges_fyi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
ccwc/: README.md
ccwc/src/: main.rs
cut/: README.md
cut/src/: main.rs
diff-tool/: Cargo.toml  README.md  file1.txt  file2.txt  newcc.txt  origcc.txt
diff-tool/src/: main.rs
http-load-tester/: Cargo.toml  README.md
http-load-tester/src/: main.rs
huffman-compression/: .gitignore  Cargo.toml  README.md  lorem.txt  output-4.txt
huffman-compression/src/: code_generation.rs  encode.rs  encode_decode.rs  main.rs  prefix_code_table.rs  tree.rs  whitespace.rs
huffman-compression/tests/: lorem.txt
json-parser/: Cargo.toml
json-parser/src/: lib.rs  parser.rs  tokenizer.rs
load-balancer/: Cargo.toml  README.md  urls.txt
load_balancer/: Cargo.toml  README.md
load_balancer/src/: lib.rs
memcached/: Cargo.toml  README.md
memcached/src/: db.rs  main.rs  response.rs  server.rs
memcached/src/commands/: add.rs  append.rs  get.rs  mod.rs  prepend.rs  replace.rs  set.rs
memcached/src/commands/extractors/: mod.rs
ratelimiter/: Cargo.toml  README.md
ratelimiter/src/: lib.rs  main.rs
ratelimiter/src/rate_limiters/: fixed_window_counter.rs  mod.rs  sliding_window.rs  sliding_window_counter.rs  token_bucket.rs
ratelimiter/src/rate_limiters/sliding_window_counter/: basic.rs  distributed.rs  mod.rs
redis-server/: Cargo.toml  README.md
redis-server/src/: connection.rs  db.rs  frame.rs  lib.rs  main.rs  resp.rs
redis-server/src/cmd/: decr.rs  del.rs  echo.rs  exists.rs  get.rs  incr.rs  lpush.rs  mod.rs  ping.rs  rpush.rs  save.rs  set.rs
shell/: Cargo.toml  README.md
shell/src/: main.rs
sort-tool/: Cargo.toml  README.md
sort-tool/src/: main.rs
sort-tool/src/sort/: bubblesort.rs  heapsort.rs  mergesort.rs  mod.rs  quicksort.rs  randomsort.rs
url-shortener/server/: Cargo.toml  README.md  docker-compose.yml
url-shortener/server/.sqlx/: query-1233a7513709fc985734822762dafcdd35db4ad474e4df3d26477f5acaaaf34b.json  query-5336f6557e8663df10d562dcac9564e99d95a2d030a03acdc1f6a012c006644f.json  query-710c45cd92f3db923a9d64293e65fbc82d4935479e7e48dfb1642bce98958d2e.json  query-b1753c4beca4a849b66f2b81a5a057a1f314600f74767b380e0a0b17016f3cd5.json  query-b5bbeab5b5a308f83ef5a818d549419b5eb80753f1af45043843d81243ed55fe.json
url-shortener/server/migrations/: 20240308041127_shortened_urls_table.sql  20240311052923_long_url_idx.sql
url-shortener/server/src/: error.rs  main.rs  routes.rs
web-server/: Cargo.toml  README.md
web-server/src/: main.rs
