[workspace]

members = [
    "ccwc",
    "cut",
    "diff-tool",
    "http-load-tester",
    "huffman-compression",
    "json-parser",
    "load-balancer", 
    "memcached",
    "ratelimiter",
    "redis-server",
    "shell",
    "sort-tool",
    "url-shortener/server",
    "web-server",
]

resolver = "2"
