[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "load_balancer"
path = "src/bin/load_balancer.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
derive_more = "0.99.17"
env_logger = "0.11.0"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.111"
