[package]
name = "memcached"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
crossbeam = "0.8"
itertools = "0.12.1"
multipeek = "0.1.2"
tokio = { version = "1.37.0", features = ["full"] }
