[package]
name = "redis-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
env_logger = "0.11.1"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"

[dev-dependencies]
rstest = "0.18.2"
