[package]
name = "redis-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
env_logger = "0.11.1"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
tracing = "0.1.40"

[dev-dependencies]
rstest = "0.18.2"
