[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.9.0"
anyhow = "1.0.80"
base64 = "0.22.0"
derive_more = "0.99.17"
env_logger = "0.11.3"
log = "0.4.21"
sha256 = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
url = { version = "2.5.0", features = ["serde"] }


[dependencies.uuid]
version = "1.7.0"
features = ["v4"]
